[package]
name = "rson"
version = "0.1.2"
license = "MIT/Apache-2.0"
keywords = ["parser", "serde", "serialization"]
authors = [
	"Dzmitry Malyshau <kvarkus@gmail.com>",
	"Thomas Schaller <torkleyy@gmail.com>",
	"Alexander Mescheryakov <freecoder.xx@gmail.com>",
]
description = "Rust Object Notation"
categories = ["encoding"]
homepage = "https://github.com/rson-rs/rson"
repository = "https://github.com/rson-rs/rson"
documentation = "https://docs.rs/rson/"
exclude = ["bors.toml", ".travis.yml"]

[lib]
name = "rson_rs"

[dependencies]
serde = "1"

[dev-dependencies]
serde_derive = "1"
serde_json = "1"
