[package]
name = "rson_rs"
version = "0.2.1"
license = "MIT/Apache-2.0"
keywords = ["parser", "serde", "serialization"]
authors = [
	"Dzmitry Malyshau <kvarkus@gmail.com>",
	"Alexander Mescheryakov <freecoder.xx@gmail.com>",
	"Thomas Schaller <torkleyy@gmail.com>",
]
description = "Rust Object Notation"
categories = ["encoding"]
homepage = "https://github.com/rson-rs/rson"
repository = "https://github.com/rson-rs/rson"
documentation = "https://docs.rs/rson_rs/"
exclude = ["bors.toml", ".travis.yml"]

[lib]
name = "rson_rs"

[dependencies]
serde = "1"

[dev-dependencies]
serde_derive = "1"
serde_json = "1"
